--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,9 @@ import Layout from '../layouts/Layout.astro';
       <li>
         <a href='/projects/timetable'>Time Table</a>
       </li>
+      <li>
+        <a href='/projects/resume'>Resume</a>
+      </li>
     </ul>
   </main>
 </Layout>
