form validation added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,12 @@ import Layout from '../layouts/Layout.astro';
       <li>
         <a href='/projects/iframes'>Iframes</a>
       </li>
+      <li>
+        <a href='/projects/inputs'>Type of Inputs</a>
+      </li>
+      <li>
+        <a href='/projects/validation'>Form Validation</a>
+      </li>
     </ul>
   </main>
 </Layout>
