--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,9 @@ import Layout from '../layouts/Layout.astro';
       <li>
         <a href='/projects/validation'>Form Validation</a>
       </li>
+      <li>
+        <a href='/projects/registration'>Registration</a>
+      </li>
     </ul>
   </main>
 </Layout>
