--- a/src/pages/projects/iframes.astro
+++ b/src/pages/projects/iframes.astro
@@ -1,9 +1,13 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Main from '../../layouts/Main.astro';
+import Back from '../../components/Back.astro';
 ---
 
 <Layout title='Projects | Iframes'>
+
+  <Back />
+
   <iframe src='/iframe1'> </iframe>
   <iframe src='/iframe2'> </iframe>
 </Layout>
