--- a/src/pages/projects/validation.astro
+++ b/src/pages/projects/validation.astro
@@ -1,11 +1,15 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Main from '../../layouts/Main.astro';
+import Back from '../../components/Back.astro';
 
 ---
 
 <Layout title='Projects | Form Validation' >
     <Main>
+
+        <Back/>
+
         <h2>Sign Up</h2>
             <form id="signup" action="https://formspree.io/f/xnqlqzqk" method="POST" >
                 <label for="email">Email</label>
