--- a/src/pages/projects/inputs.astro
+++ b/src/pages/projects/inputs.astro
@@ -1,10 +1,14 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import Main from '../../layouts/Main.astro';
+import Back from '../../components/Back.astro';
 ---
 
 <Layout title='Projects | Input Types'>
   <Main>
+
+    <Back />
+
     <h2>Input Types</h2>
     <form>
       <label> Text Input</label>
